# voyager

./: .gitattributes  .gitignore  CONTRIBUTING.md  MISSION_FACTS.md  README.md  THIRD_PARTY.md  epic-cycle-teams-v2.md  epic-cycle-teams-v3.md  epic-cycle-teams.md  epic-cycle-workflow-creation.md  initial-research.md  justfile
_bmad/: config.toml
bake/: main.py  pyproject.toml  ruff.toml
bake/inputs/: voyager-mesh-mapping.json
bake/inputs/models/: voyager-raw.glb
bake/scripts/: add_decompressed_sha.py
bake/src/: _kernel_io.py  acquire_kernels.py  bake_trajectories.py  ck_inventory.py  ck_sample.py  fk_inventory.py  generate_l2_fixtures.py  l2_attitude_validation.py  manifest_writer.py  quat_continuity.py  validate_l1.py  verify_kernels.py  vtrj_writer.py
bake/tests/: test_acquire_kernels.py  test_adr_catalogue.py  test_adr_catalogue_defense.py  test_bake_attitude_slow.py  test_bake_defense.py  test_bake_moon_trajectories.py  test_bake_trajectories.py  test_bake_trajectories_cadence.py  test_bake_trajectories_moons.py  test_ci_defense.py  test_ci_workflow.py  test_ck_inventory.py  test_ck_inventory_bus_id.py  test_ck_sample.py  test_ck_sample_qa_gaps.py  test_generate_l2_fixtures.py  test_kernels_defense.py  test_kernels_manifest.py  test_l2_attitude_validation.py  test_l2_attitude_validation_qa_gaps.py  test_manifest_writer.py  test_quat_continuity.py  test_scaffold.py  test_validate_attitude_l1.py  test_validate_l1.py  test_vtrj_writer.py
docs/: url-contract.md
kernels/: frame-ids.md  jup365.bsp  kernels-manifest.json  ura184_part-3.bsp  vg100051.tsc  (+11 more)
(+644 files in other folders)
